<resources>
    <string name="app_name">Restaurant</string>
    <string name="stol_1_name">Stol 1</string>
    <string name="stol_1_value">1</string>
    <string name="stol_2_name">Stol 2</string>
    <string name="stol_2_value">2</string>
    <string name="stol_3_name">Stol 3</string>
    <string name="stol_3_value">3</string>
    <string name="stol_4_name">Stol 4</string>
    <string name="stol_4_value">4</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_single_table">Table</string>
    <string name="title_add">Add Item</string>
    <string name="title_add_item">Done</string>
    <string name="title_order">Send Order</string>
    <string name="title_payout">Pay Out</string>
    <string name="title_show_paid">Show Paid</string>
    <string name="addedViewID">addedViewId</string>
    <string name="title_activity_single_table_pay_out">SingleTablePayOutActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_single_table_add">SingleTableAddActivity</string>
    <string name="title_activity_single_table_finish_order">SingleTableFinishOrderActivity</string>
    <string name="ordered_messagge_header">Item\t Quantity</string>
    <string name="ordered_messagge">%1$s\t %2$d</string>
    <string name="table_title">Table %1$d</string>
    <string name="aha">Aha %1$d</string>
    <string name="title_pay_all">Pay all</string>
    <string name="title_pay_selected">Pay selected</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_0">%1$d/%2$d</string>
    <string name="pay_all_orders_question">Are you sure to pay out all orders?</string>
    <string name="pay_selected_orders_question">Are you sure to pay out selected orders?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_show_paid_items">ShowPaidItemsActivity</string>
    <string name="return_back">Return</string>
    <string name="paid_items_price">%1$d</string>
</resources>
